--- a/fa_about_us.html
+++ b/fa_about_us.html
@@ -39,8 +39,8 @@ body {
   <tr>
     <td><table width="100%" border="0" cellspacing="0" cellpadding="0">
       <tr>
-        <td width="850"><a href="fa_default.html"><img src="images/header.gif" alt="صفحه اصلی" title="صفحه اصلی" width="850" height="150" border="0" /></a></td>
-        <td width="150"><a href="fa_default.html"><img src="images/ir_flag.gif" alt="صفحه اصلی" title="صفحه اصلی" width="150" height="150" border="0" /></a></td>
+        <td width="850"><a href="index.html"><img src="images/header.gif" alt="صفحه اصلی" title="صفحه اصلی" width="850" height="150" border="0" /></a></td>
+        <td width="150"><a href="index.html"><img src="images/ir_flag.gif" alt="صفحه اصلی" title="صفحه اصلی" width="150" height="150" border="0" /></a></td>
       </tr>
     </table></td>
   </tr>
@@ -56,7 +56,7 @@ body {
         </table></td>
       </tr>
       <tr>
-        <td align="center" valign="top" bgcolor="#002833"><span class="navigation_text"><a href="fa_default.html" >صفحه اصلی</a></span>  <span class="differ_line">|</span>  <span class="navigation_text"><a href="fa_ticket_reserve.html">رزرو بلیط</a></span>  <span class="differ_line">|</span>  <span class="navigation_text"><a href="fa_hotel_reserve.html">رزرو هتل</a></span>  <span class="differ_line">|</span>  <span class="navigation_text"><a href="fa_gallery.html">گالری عکس</a></span>  <span class="differ_line">|</span>  <span class="navigation_text"><a href="fa_about_us.html">درباره ما </a></span> <span class="differ_line">|</span>  <span class="navigation_text"><a href="fa_contact_us.html">تماس با ما</a></span> </td>
+        <td align="center" valign="top" bgcolor="#002833"><span class="navigation_text"><a href="index.html" >صفحه اصلی</a></span>  <span class="differ_line">|</span>  <span class="navigation_text"><a href="fa_ticket_reserve.html">رزرو بلیط</a></span>  <span class="differ_line">|</span>  <span class="navigation_text"><a href="fa_hotel_reserve.html">رزرو هتل</a></span>  <span class="differ_line">|</span>  <span class="navigation_text"><a href="fa_gallery.html">گالری عکس</a></span>  <span class="differ_line">|</span>  <span class="navigation_text"><a href="fa_about_us.html">درباره ما </a></span> <span class="differ_line">|</span>  <span class="navigation_text"><a href="fa_contact_us.html">تماس با ما</a></span> </td>
       </tr>
       <tr>
         <td><table width="100%" border="0" cellspacing="0" cellpadding="0">
@@ -176,7 +176,7 @@ body {
                 </table></td>
               </tr>
               <tr>
-                <td align="right" valign="top" bgcolor="#004655"><a href="fa_default.html"><span class="text_subject_top">صفحه اصلی</span></a> <img src="images/arrow.png" width="9" height="9" /><!-- InstanceBeginEditable name="subject" --><a href="fa_about_us.html"><span class="text_subject_top">درباره ما</span></a><!-- InstanceEndEditable --></td>
+                <td align="right" valign="top" bgcolor="#004655"><a href="index.html"><span class="text_subject_top">صفحه اصلی</span></a> <img src="images/arrow.png" width="9" height="9" /><!-- InstanceBeginEditable name="subject" --><a href="fa_about_us.html"><span class="text_subject_top">درباره ما</span></a><!-- InstanceEndEditable --></td>
               </tr>
               <tr>
                 <td align="center" valign="top" bgcolor="#004655"><!-- InstanceBeginEditable name="main_area" --><div class="main_text">ميراث فرهنگي_ گردشگري در بيشتر كشورهاي جهان، علاوه بر اينكه عاملي است  براي آشتي اقوام و فرهنگ‌ها، زمينه‌ساز پيشرفت بخش اقتصادي آنها نيز  به‌شمار مي‌رود. كشورهايي مانند مالزي و اسپانيا از گردشگري به عنوان صنعت  اول خود ياد مي‌كنند. اما اين نكته نيز قابل ذكر است كه به‌دليل پيچيدگي  اين صنعت و وابستگي آن به ديگر صنايع، همواره گردشگري صنعتي متزلزل است و  اتكاي بيش از حد به آن به عنوان صنعت اول كشور، گاهي موجب خطر سقوط اقتصاد  يك كشور مي‌گردد.  همانطور كه آمار جهاني نيز نشان مي‌دهد، با وجود بحران جهاني اقتصاد، صنعت  جهانگردي نيز با فراز و نشيب‌هايي رو به رو شده است. به‌طوريكه بسياري از  تورهاي خروجي كشورهاي گردشگر فرست مانند آلمان و ژاپن به ايران يا ديگر به  بازارهاي گردشگري لغو شده است.  در ايران در نوروز بيشترين گردشگر به تمام نقاط ايران سفر مي‌كند و با اين  حجم مسافرت، جوامع محلي بيشترين سود را مي‌توانند داشته باشند.<br />
@@ -414,7 +414,7 @@ body {
         <td align="center" valign="middle"><img src="images/footer_line.jpg" width="800" height="4" /></td>
       </tr>
       <tr>
-        <td align="center" valign="middle"><a href="fa_default.html" >صفحه اصلی</a> <span class="differ_line_footer">|</span> <a href="fa_ticket_reserve.html">رزرو بلیط</a></span> <span class="differ_line_footer">|</span> <a href="fa_hotel_reserve.html">رزرو هتل</a> <span class="differ_line_footer">|</span> <a href="fa_gallery.html">گالری عکس</a> <span class="differ_line_footer">|</span> <a href="fa_about_us.html">درباره ما </a> <span class="differ_line_footer">|</span> <a href="fa_contact_us.html">تماس با ما</a></td>
+        <td align="center" valign="middle"><a href="index.html" >صفحه اصلی</a> <span class="differ_line_footer">|</span> <a href="fa_ticket_reserve.html">رزرو بلیط</a></span> <span class="differ_line_footer">|</span> <a href="fa_hotel_reserve.html">رزرو هتل</a> <span class="differ_line_footer">|</span> <a href="fa_gallery.html">گالری عکس</a> <span class="differ_line_footer">|</span> <a href="fa_about_us.html">درباره ما </a> <span class="differ_line_footer">|</span> <a href="fa_contact_us.html">تماس با ما</a></td>
       </tr>
       <tr>
         <td align="center" valign="middle">.استفاده از مطالب این سایت با ذکر منبع بلامانع است</td>
