--- a/test.html
+++ b/test.html
@@ -36,8 +36,8 @@ body {
   <tr>
     <td><table width="100%" border="0" cellspacing="0" cellpadding="0">
       <tr>
-        <td width="850"><a href="fa_default.html"><img src="images/header.gif" alt="صفحه اصلی" title="صفحه اصلی" width="850" height="150" border="0" /></a></td>
-        <td width="150"><a href="fa_default.html"><img src="images/ir_flag.gif" alt="صفحه اصلی" title="صفحه اصلی" width="150" height="150" border="0" /></a></td>
+        <td width="850"><a href="index.html"><img src="images/header.gif" alt="صفحه اصلی" title="صفحه اصلی" width="850" height="150" border="0" /></a></td>
+        <td width="150"><a href="index.html"><img src="images/ir_flag.gif" alt="صفحه اصلی" title="صفحه اصلی" width="150" height="150" border="0" /></a></td>
       </tr>
     </table></td>
   </tr>
